syntax = "proto3";
package babylon.zoneconcierge.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "babylon/btccheckpoint/v1/btccheckpoint.proto";
import "babylon/checkpointing/v1/checkpoint.proto";
import "babylon/epoching/v1/epoching.proto";
import "babylon/zoneconcierge/v1/zoneconcierge.proto";
import "babylon/zoneconcierge/v1/params.proto";

option go_package = "github.com/babylonlabs-io/babylon/v3/x/zoneconcierge/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/babylon/zoneconcierge/v1/params";
  }
  // FinalizedConsumersInfo queries the BTC-finalised info of consumers with given IDs, with proofs
  rpc FinalizedConsumersInfo(QueryFinalizedConsumersInfoRequest)
      returns (QueryFinalizedConsumersInfoResponse) {
    option (google.api.http).get =
        "/babylon/zoneconcierge/v1/finalized_consumers_info";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  babylon.zoneconcierge.v1.Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryFinalizedConsumersInfoRequest is request type for the
// Query/FinalizedConsumersInfo RPC method.
message QueryFinalizedConsumersInfoRequest {
  // consumer_ids is the list of ids of Consumers
  repeated string consumer_ids = 1;
  // prove indicates whether the querier wants to get proofs of this timestamp
  bool prove = 2;
}

// QueryFinalizedConsumersInfoResponse is response type for the
// Query/FinalizedConsumersInfo RPC method.
message QueryFinalizedConsumersInfoResponse {
  repeated FinalizedConsumerData finalized_consumers_data = 1;
}

// FinalizedConsumerData contains the finalized consumer data for a consumer
message FinalizedConsumerData {
  string consumer_id = 1;
  // The latest finalized header for this consumer
  IndexedHeader latest_finalized_header = 2;
  // The epoch in which this header was finalized
  babylon.epoching.v1.Epoch epoch_info = 3;
  // The raw checkpoint of this epoch
  babylon.checkpointing.v1.RawCheckpoint raw_checkpoint = 4;
  // The submission key for the checkpoint
  babylon.btccheckpoint.v1.SubmissionKey btc_submission_key = 5;
  // Proofs of finality
  ProofFinalizedHeader proof = 6;
}
